14. Correctly report total track count for multi-CD album when listed as 1 album
    in LMS.
15. Fix ctrl+left causing current track to go to start - should be checking for
    alt+left.
16. Use page up/down to scroll browse and queue views - alt + page up/down for
    queue in desktop layout (either with or without alt for mobile layout)
17. Don't swipe to change volume on powered off player.

1.5.2
-----
 1. Add 'libcometd' to debug options.
 2. If showing dots for jumplist, only show 10 dots - therefore each jump is 10%
 3. Fix retrieval of rescan options on LMS 7.x
 4. Store album-sorts in defaults.
 5. Fix setting window titlebar back to "Logitech Media Server" when no song.
 6. Fix layout in 'Manage players' dialog.
 7. Dim play buttons in 'Manage players' dialog if player has no track.
 8. Fix colour of power icons in menus.
 9. Add monochrome pandora and iheartradio icons.
10. Always set axios/html language to LMS's.
11. Don't just use user-agent to detect mobile device, check if
    window.orientation is defined and window has 'ontouchstart' - should
    (hopefully) help with detecting iPadOS.
12. When clicking on add/play from sub-toolbar, in most app lists, add each
    listed item one by one.
13. If there is sufficient space, show LMS update text in toolbar.
14. If there is an error during 1 part of search then still advance to next.
15. Click on title (or subtitle on touch devices) in grid view will now show
    menu.
16. If adding library tracks to queue, use single command to specify a list of
    track IDs.
17. If adding add/play actions to toolbar, only add for app lists when first
    item is a playable track.
18. Use "playlistcontrol, cmd:delete, album_id:XXX" to remove album from queue.

1.5.1
-----
 1. Fix 'Play all' and 'Play next' from header.
 2. Don't hide 'Interface' from server settings, just hide some options.
 3. Fix icon mapping of some icons.
 4. Hide jumplist when showing Artists/Album/etc. selection of genre.