@@ -23,6 +23,8 @@
 16. Use page up/down to scroll browse and queue views - alt + page up/down for
     queue in desktop layout (either with or without alt for mobile layout)
 17. Don't swipe to change volume on powered off player.
+18. If loop_loop contains text items with images and text length of 50 chars or
+    less, then treat as a list of images.
 
 1.5.2
 -----
